[package]
name = "ascii-canvas"
version = "3.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
description = "simple canvas for drawing lines and styled text and emitting to the terminal"
repository = "https://github.com/nikomatsakis/ascii-canvas"
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
term = "0.7"

[dev-dependencies]
diff = "0.1"
