[package]
name = "ascii-canvas"
version = "4.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
description = "simple canvas for drawing lines and styled text and emitting to the terminal"
repository = "https://github.com/lalrpop/ascii-canvas"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
term = "1"

[dev-dependencies]
diff = "0.1"
